# dia-tts-runpod

./: .gitignore  Dockerfile  README.md  handler.py  pyproject.toml
examples/: input.jsonl  script.sh
