[project]
name = "dia-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "huggingface-hub>=0.30.2",
    "llvmlite>=0.44.0",
    "nari-tts @ git+https://github.com/nari-labs/dia.git@61ae8e039276eca622fc27db2c1ead1eaf417e6c",
    "pydantic>=2.11.3",
    "runpod>=1.7.13",
    "torch==2.6.0",
    "torchaudio==2.6.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
